[B]2.2.5[/B]
- fixed: IMDb rating, MPAA rating and plot outline after site changes

[B]2.2.4[/B]
- fixed: missing imdb ID in search results due to site changes

[B]2.2.3[/B]
- fixed: IMDb rating

[B]2.2.2[/B]
- fixed: make sure imdb ID picked up correctly from international sites

[B]2.2.1[/B]
- fixed: wrong imdb ID detection other certain circumtances

[B]2.2.0[/B]
- Better USA/International title recognition + make NfoUrl imdb site independent

[B]2.1.9[/B]
- fixed: actor roles and remove scraping of imdb trailers

[B]2.1.8[/B]
- fixed: some movies won't scrape at all

[B]2.1.7[/B]
- fixed: actor images

[B]2.1.6[/B]
- fixed: real fix for hd-trailers.net

[B]2.1.5[/B]
- fixed: trailer scraping from hd-trailers.net

[B]2.1.4[/B]
- fixed: fixed artists due to IMDb changes

[B]2.1.3[/B]
- fixed: fix previous commit

[B]2.1.2[/B]
- fixed: title scraping due to site changes

[B]2.1.1[/B]
- changed: re-added fixchars

[B]2.1.0[/B]
- changed: scrape only 1 studio

[B]2.0.11[/B]
- changed: move scraping of IMDb rating out to IMDb scraper library

[B]2.0.10[/B]
- fixed: year won't get scraped if title contains brackets

[B]2.0.9[/B]
- added: Polish language

[B]2.0.8[/B]
- reverted: purge fixchars from all functions, since it cause convert fails on Beta2 and Linux

[B]2.0.7[/B]
- fixed: title won't find if year includes the string /I in the search results

[B]2.0.6[/B]
- fixed: year won't get scraped if a string attached to the year (e.g. "TV 2008")

[B]2.0.5[/B]
- fixed: title won't find if a string is attached to the year (e.g. "TV 2008")

[B]2.0.4[/B]
- reverted: fixchars removed from cast parsing, leads to Dharma Beta2 hanging, will be added back once next Beta is out

[B]2.0.3[/B]
- fixed: some more cast won't get scraped under certain circumtances, added back trailers from IMDb as fallback

[B]2.0.2[/B]
fixed: cast won't get scraped under certain circumtances, remove broken code to scrape trailers from IMDb

[B]2.0.1[/B]