@@ -1,3 +1,6 @@
+[B]2.2.6[/B]
+- fixed: Originaltitle some time contains 'IMDb - ' string
+
 [B]2.2.5[/B]
 - fixed: IMDb rating, MPAA rating and plot outline after site changes
 
